FIX- sizing on smaller screens

--- a/Task list/css/style.css
+++ b/Task list/css/style.css
@@ -131,3 +131,39 @@
   .hidden{
       display:none;
   }
+  @media only screen and (max-width: 600px) {
+    ul li {
+     margin-left:0px;
+     margin-right:0px;
+    }
+    .header{
+      margin-left:0px;
+      margin-right:0px;
+    }
+  }
+  @media only screen and (min-width: 720px) {
+    ul li {
+      margin-left:150px;
+      margin-right:150px;
+     }
+     .header{
+       margin-left:150px;
+       margin-right:150px;
+     }
+     #completedonly{
+      margin-left:180px;
+    }
+   }
+  
+   @media only screen and (min-width: 900px) {
+    ul li {
+      margin-left:280px;
+      margin-right:280px;
+     }
+     .header{
+       margin-left:280px;
+       margin-right:280px;
+     }
+  
+   }
+  
